--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a class="back-home" href="index.html">Terug naar Home</a>
 
       <!-- ⚠️ VERVANG DEZE LINK DOOR JE ECHTE GITHUB REPO -->
-      <a class="github-link" href="https://github.com/JOUWNAAM/JOUWREPO" target="_blank" rel="noopener">
+      <a class="github-link" href="https://github.com/Sanaa-Arkoubi/Hesnanur-.git" target="_blank" rel="noopener">
         Bekijk code op GitHub
       </a>
     </div>
